--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Max Vibe Webapp is a React.js web application developed with Tailwind CSS and integrated JioSaavn API to fetch and display songs, playlists, albums, and artist information. Explore a diverse selection of music with multi-language support, efficient search functionality, and seamless playback options.">
     <meta name="keywords" content="ultimate songs, webapp, React.js, Tailwind CSS, JioSaavn API, music, playlists, albums, artists, search functionality, multi-language support, song player, music streaming, music-player, songs, best free music-streaming, streaming-audio, song-downloader, music-website, music-webapp, jio-saavn, jiosaavn, jiosaavn-downloader, jiosaavn-api, jiosaavn-web, jiosaavnapi, saavn-api, best-project, best-music">
-    <meta name="author" content="Harsh Patel">
+    <meta name="author" content="THEBOYS">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Max Vibe Webapp | React.js, Tailwind CSS, JioSaavn API">
     <meta property="og:description" content="Explore a diverse selection of music with multi-language support, efficient search functionality, and seamless playback options. Developed with React.js, Tailwind CSS, and integrated JioSaavn API.">
